--- a/blogpost.html
+++ b/blogpost.html
@@ -1,5 +1,6 @@
 <html>
     <head>
+        <meta charset="UTF-8">
         <title>Bienvenido a Hyperblog 2.0</title>
         <link rel="stylesheet" href="css/estilos.css"/>
     </head>
@@ -10,10 +11,10 @@
                 Hyperblog <span id="tagline">Tu blog de cabecera</span>
             </div>
             <div id="post">
-                <h1>Este es el titulo interactivo e interesante del post</h1>
-                <p>Este es el parrafo de inicio donde vamos a explicar las cosas increibles que se van a hacer con ramas </p>
-                <p>Los blogs son la mejor forma de compartir informacion y tus ideas. Mucho mas que ir a conferencias o salir en YouTube. Excepto si eres un Rockstar. Pero estadisticamente no lo eres... por ahora.</p>
-                <p>Suscribete y dale like</p>
+                <h1>Este es el título interactivo e interesante del post</h1>
+                <p>Este es el párrafo de inicio donde vamos a explicar las cosas increibles que se van a hacer con ramas </p>
+                <p>Los blogs son la mejor forma de compartir información y tus ideas. Mucho más que ir a conferencias o salir en YouTube. Excepto si eres un Rockstar. Pero estadisticamente no lo eres... por ahora.</p>
+                <p>Suscríbete y dale like</p>
             </div>
         </div>
         
