--- a/blogpost.html
+++ b/blogpost.html
@@ -12,7 +12,7 @@
             </div>
             <div id="post">
                 <h1>Este es el título interactivo e interesante del post</h1>
-                <p>Este es el párrafo de inicio donde vamos a explicar las cosas increibles que se van a hacer con ramas </p>
+                <p>Este es el párrafo de inicio donde vamos a explicar las cosas increíbles que se van a hacer con ramas </p>
                 <p>Los blogs son la mejor forma de compartir información y tus ideas. Mucho más que ir a conferencias o salir en YouTube. Excepto si eres un Rockstar. Pero estadisticamente no lo eres... por ahora.</p>
                 <p>Suscríbete y dale like</p>
             </div>
