--- a/blogpost.html
+++ b/blogpost.html
@@ -7,12 +7,13 @@
     <body>
         <div id="container">
             <div id="cabecera">
-                <img id="logo" src="imagenes/dragon.png">
+                <img id="logo" src="imagenes/dragon.png"/>
                 Hyperblog <span id="tagline">Tu blog de cabecera</span>
             </div>
             <div id="post">
                 <h1>Este es el título interactivo e interesante del post</h1>
                 <p>Este es el párrafo de inicio donde vamos a explicar las cosas increíbles que se van a hacer con ramas </p>
+                <p><img src="imagenes/equipo.jpg" width="100%"/> </p>
                 <p>Los blogs son la mejor forma de compartir información y tus ideas. Mucho más que ir a conferencias o salir en YouTube. Excepto si eres un Rockstar. Pero estadisticamente no lo eres... por ahora.</p>
                 <p>Suscríbete y dale like</p>
             </div>
